test/corpus/iHello.verbose.txt
========================
Interface verbose
========================

Classfile /home/kghost/workspace/tree-sitter-javap/test/corpus/IHello.class
  Last modified Feb 19, 2022; size 204 bytes
  MD5 checksum 2f61745c0a0435186fc95625763ab74e
  Compiled from "IHello.java"
interface IHello
  minor version: 0
  major version: 55
  flags: (0x0600) ACC_INTERFACE, ACC_ABSTRACT
  this_class: #1                          // IHello
  super_class: #2                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 2, attributes: 1
Constant pool:
   #1 = Class              #10            // IHello
   #2 = Class              #11            // java/lang/Object
   #3 = Utf8               getNumber
   #4 = Utf8               ()I
   #5 = Utf8               Code
   #6 = Utf8               LineNumberTable
   #7 = Utf8               getAbstractNumber
   #8 = Utf8               SourceFile
   #9 = Utf8               IHello.java
  #10 = Utf8               IHello
  #11 = Utf8               java/lang/Object
{
  public default int getNumber();
    descriptor: ()I
    flags: (0x0001) ACC_PUBLIC
    Code:
      stack=1, locals=1, args_size=1
         0: iconst_4
         1: ireturn
      LineNumberTable:
        line 4: 0

  public abstract int getAbstractNumber();
    descriptor: ()I
    flags: (0x0401) ACC_PUBLIC, ACC_ABSTRACT
}
SourceFile: "IHello.java"

------------------------------

 (source_file
      (header
        (header_info
          (file_path))
        (header_info_last_mod)
        (header_info_md5
          (md5))
        (header_info_compile))
      (class_info_def
        (interface_keyword)
        (identifier)
        (class_info_item
          (class_info_item_simple
            (number)))
        (class_info_item
          (class_info_item_simple
            (number)))
        (class_info_item
          (flag_def
            (hex_value)
            (flag_value)
            (flag_value)))
        (class_info_item
          (class_info_item_simple
            (number)
            (comment)))
        (class_info_item
          (class_info_item_simple
            (number)
            (comment)))
        (class_info_item
          (class_info_item_simple
            (number)
            (number)
            (number)
            (number))))
      (constant_pool_def
        (constant_pool_item
          (number)
          (number)
          (comment))
        (constant_pool_item
          (number)
          (number)
          (comment))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number))
        (constant_pool_item
          (number)))
      (block
        (class_definition
          (method_def
            (modifiers)
            (primitive_type)
            (identifier)
            (args))
          (descriptor_def
            (descriptor_value))
          (flag_def
            (hex_value)
            (flag_value))
          (code_def
            (code_info
              (code_info_stat
                (number))
              (code_info_stat
                (number))
              (code_info_stat
                (number))
              (numered_instruction
                (number)
                (instruction))
              (numered_instruction
                (number)
                (instruction)))
            (line_number_table_def
              (numered_line
                (number)
                (number))))
          (method_def
            (modifiers)
            (primitive_type)
            (identifier)
            (args))
          (descriptor_def
            (descriptor_value))
          (flag_def
            (hex_value)
            (flag_value)
            (flag_value))))
      (source_file_def))
